--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Ruby
 on: [push,pull_request]
 
 jobs:
-  build:
+  spec:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
