--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: [3.2, 3.3, 3]
+        ruby-version: [3.2, 3.3, 3.4, 3]
     steps:
     - uses: actions/checkout@v4
     - name: Set up Ruby
